# path_follower_ws

./: .gitignore  runKiaMap.sh  run_only_gui_steering.sh  run_xa_gps_path.sh  setCan.bash  test.bag
src/: path_rotated.json
src/azsp_msgs/: CMakeLists.txt  README.md  package.xml
src/azsp_msgs/msg/: BoundingBox.msg  BoundingBoxId.msg  BoundingBoxesId.msg  BrakePreassure.msg  Decision.msg  Imu.msg  Imus.msg  LaneDetection.msg  LaneDetections.msg  NiroCanData.msg  Obstacle.msg  ObstacleAvoidancePath.msg  SteeringWheelData.msg  WheelSpeed.msg
src/azsp_path_follower_converter-main/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.py
src/azsp_path_follower_converter-main/config/: config.yaml
src/azsp_path_follower_converter-main/launch/: converter_launch.launch
src/azsp_path_follower_converter-main/nodes/: converter_node.py
src/azsp_path_follower_converter-main/src/azsp_path_follower_converter/: __init__.py  converter.py  path_rotation_convertion_example.py
src/can_socketcan/: CMakeLists.txt  package.xml
src/can_socketcan/src/: SocketCan.cpp  SocketCan.h  can_socketcan_node.cpp
src/common_msgs/driveworks_msgs/: CMakeLists.txt  package.xml
src/common_msgs/driveworks_msgs/msg/: DatectionTopicsNames.msg  DetectedLane.msg  DetectedLaneList.msg  DetectedObject.msg  DetectedObjectList.msg  DetectedPath.msg  DetectedPathList.msg  EstimatedDistances.msg
src/common_msgs/gps_msgs/: CMakeLists.txt  package.xml
src/common_msgs/kml_grid_msgs/: CMakeLists.txt  package.xml
src/common_msgs/path_follower_msgs/: CMakeLists.txt  package.xml
src/common_msgs/swift_nav_sbp_udp_msgs/: CMakeLists.txt  package.xml
src/common_msgs/vision_msgs/: CMakeLists.txt  package.xml
src/common_msgs/vision_msgs/msg/: ld_data.msg  ld_line.msg  od_data.msg  od_object.msg  segmentation_data.msg  segmentation_object.msg
src/kia_control/: CMakeLists.txt  package.xml
src/kia_control/include/: kia_dataspeed_controller.h
src/kia_control/launch/: joy_fun.launch  kia_dataspeed_joy.launch  kia_oscc_system.launch  polysync_joy.launch
src/kia_control/node/: kia_dataspeed_node.cpp  kia_joy_node.cpp
src/kia_control/perspective/: GUI+DynRec+Plot.perspective  Steering_calib.perspective  oscc_cmd.perspective
src/kia_control/src/: kia_dataspeed_controller.cpp
src/kia_map_pimot/: CMakeLists.txt  package.xml
src/kia_map_pimot/config/: params.yaml  params_modlin.yaml  params_pimot.yaml  params_politechnika.yaml
src/kia_map_pimot/launch/: kia_map.launch
src/kia_map_pimot/media/: box.txt  mapa.qrc
src/kia_map_pimot/nodes/: hello_gui_node.cpp  talker.cpp
src/kia_map_pimot/src/: graphicsscene.cpp  hello_gui.cpp  template_publisher_gps_pos.py  (+1 more)
src/kml_grid/: 2grid.py  CMakeLists.txt  package.xml
src/logic_swift_nav/: CMakeLists.txt  package.xml  setup.py
src/logic_swift_nav/include/logic_swift_nav/: logic_swift_nav.h
src/logic_swift_nav/script/: WriteWaypointTrack.sh
src/logic_swift_nav/src/logic_swift_nav/: logic_swift_nav.cpp
src/logic_swift_nav/srv/: AdvertisePath.srv  StartPathRecord.srv  StopPathRecord.srv
src/niro_demo_launcher/: CMakeLists.txt  package.xml
src/niro_demo_launcher/config/: Nodes_diagnostic.perspective  Topic_Diagnostic.perspective  kia_niro.yaml  niro_demo_node_manager.desktop  niro_joy_node_manager.desktop  topic_diagnostic.desktop
src/niro_demo_launcher/launch/: all_nodes.launch  gps_navigation_kia.launch  gps_path_planner_kia.launch  gui_oscc_steering.launch  niro_demo_node_manager.launch  rqt_gui_windows.launch  transform_def.launch  transform_def_kia.launch  visualization_kia.launch
src/niro_demo_launcher/perspective/: OsccSwiftRviz.perspective  PlotSteeringCmd.perspective  RecordAndReplayGpsPath.perspective
src/niro_demo_launcher/rviz/: ces_od.rviz  gpsPathRecord.rviz  lidar.rviz  naias.rviz
src/niro_demo_launcher/script/: createShortcut.sh  setup.sh
src/rqt_oscc_cmd/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/rqt_oscc_cmd/include/rqt_oscc_cmd/: my_plugin.h
src/rqt_oscc_cmd/src/rqt_oscc_cmd/: my_plugin.cpp  my_plugin.ui
src/rqt_swift_nav/: 2804naszprzejazd  2804testpath  CMakeLists.txt  ODWROTNE  aaaaa  azymut  bialekBedzieDumny  costamtam  dobranazwajestkluczowa  finaltest  jazdadoprzodu  ostatecznysad  ostateczyn2  ostatnitest  package.xml  path.json  path01  path02  path1  path_rotated.json  path_rotated_plus90.json  pimot_test  pimot_test_2  plugin.xml  propozycjaNazwy  prosta  przecinaniepolnocy  przejazd_linie_1  przejazd_linie_2  przejazd_linie_3  przejazd_linie_utrzymanie_1  ring  ring2  sampleDrive  sci  sciezka  sciezka.json  sciezka_okrag  sciezka_omijanie  sciezka_v10  (+9 more)
src/spatialdual_msgs/: CMakeLists.txt  package.xml
src/spatialdual_msgs/msg/: AngularVelocity.msg  BodyAcceleration.msg  ECEFPosition.msg  FilterStatus.msg  GNSSRecvInfo.msg  GeodeticPosition.msg  NavSatFix.msg  RollPitchHeading.msg  SatFixStdDev.msg  SystemState.msg  SystemStatus.msg  UTMPosition.msg  VelocityNED.msg
src/swift_nav_sbp_udp/: CMakeLists.txt  package.xml
src/visualization/: .gitignore
src/visualization/agx_dw_vis/: CMakeLists.txt  data_objects_types.csv  data_signs.csv  package.xml
src/visualization/agx_dw_vis/launch/: agx_dw_vis.launch  fake_agx_dw_vis.launch
src/visualization/agx_dw_vis/scripts/: fake_detected_signs.py  fake_distances.py  ros_communication.py  visualization.py
src/visualization/polygon_to_triangle/: CMakeLists.txt  package.xml
src/visualization/polygon_to_triangle/launch/: agx_dw_vis.launch
src/visualization/polygon_to_triangle/scripts/: ros_communication.py  visualization.py
src/visualization/polygon_to_triangle/src/: main.cpp
src/visualization/rviz_mesh/: CMakeLists.txt  README.md  package.xml
src/visualization/rviz_mesh/launch/: display.launch
src/visualization/rviz_mesh/rviz/: urdf.rviz  urdf.vcg
src/visualization/rviz_mesh/urdf/: gtc_map.urdf.xacro
src/visualization/versor_vis/: CMakeLists.txt  package.xml
src/visualization/versor_vis/launch/: versor_vis.launch
src/visualization/versor_vis/scripts/: versor_vis.py
(+133 files in other folders)
