[tool.poetry]
name = "azsp_path_follower_converter"
version = "0.1.0"
description = "This package contains node that is able to transform xy points to pathfollower's format and start fllowing the path "
authors = ["Oskar  Osinski <oskar.osinski@pimt.lukasiewicz.gov.pl>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
rospkg = "^1.4.0"
hypothesis = "^6.53.0"
catkin-pkg = "^0.5.2"
pyproj = "^3.4.0"
utm = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.1.2"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
