<?xml version="1.0"?>
<package>
  <name>spatialdual_msgs</name>
  <version>0.0.0</version>
  <description>
    ROS Messages for Advanced Navigation GPS system Spatial Dual
  </description>

  <license>BSD</license>
  <author email="dwyer2bp@gmail.com">Brian Dwyer</author>
  <maintainer email="none@none.com">None</maintainer>
  <url type="website"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>  
  
  <export>
  </export>
</package>
