<?xml version="1.0"?>
<package>
  <name>driveworks_msgs</name>
  <version>0.0.0</version>
  <description>
    FEV messages for Driveworks on Xavier
  </description>

  <license>BSD</license>
  <author email="fev@fev.com"></author>
  <maintainer email="fev@fev.com">None</maintainer>
  <url type="website"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>

  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  
  <export>
  </export>
</package>
