<?xml version="0.2"?>
<package format="2">
  <name>agx_dw_vis</name>
  <version>0.0.0</version>
  <description>The agx_dw_vis package</description>

  <maintainer email="fev@todo.todo">fev</maintainer>

  <license>Internal</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>driveworks_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
