<?xml version="0.2"?>
<package format="2">
  <name>polygon_to_triangle</name>
  <version>0.0.0</version>
  <description>The polygon_to_triangle package</description>

  <maintainer email="fev@todo.todo">fev</maintainer>

  <license>Internal</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>driveworks_msgs</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>kml_parser_publisher</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
